# danebot_hexapod

./: CMakeLists.txt  README.md
include/: base.h  config.h  hexapod.h  joystick.h  leg.h  motor.h  movement.h  trajectory.h
src/: hexapod.cpp  joystick.cpp  leg.cpp  main.cpp  motor.cpp  movement.cpp  trajectory.cpp
